methods.picture.PictureMono1.scala.code
override def run() {
  faireV()
  droite()
  droite()
  recule()
  recule()
}

def faireV(){
  gauche()
  avance()
  avance()
  marqueSol()
  droite()
  avance()
  gauche()
  avance()
  marquerSol()
  avance()
  gauche()
  avance()
  marquerSol()
  
}

def marquerSol()
	baisseBrosse()
	leveBrosse()
